[package]
name = "client"
version = "0.1.0"
authors = ["Paul Dhanda <pauldhanda@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.42"
wasm-bindgen = "0.2.65"
console_error_panic_hook = "0.1.6"
futures ="0.3.5"
wasm-bindgen-futures= "0.4.15"
[dependencies.web-sys]
version = "0.3.40"
features = [
  'Document',
  'CssStyleDeclaration',
  'Element',
  'HtmlElement',
  'HtmlImageElement',
  'Node',
  'Window',
  'console',
  'ImageBitmap',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]
