[package]
name = "game"
version = "0.1.0"
authors = ["Paul Dhanda <pauldhanda@live.com>"]
edition = "2018"

[dependencies]
webrtc-unreliable = "0.4.1"
clap = "2.32"
env_logger = "0.7"
futures = { version = "0.3" }
hyper = { version = "0.13", features = ["stream"] }
tokio = { version = "0.2", features = ["macros"] }
byteorder = "1.3"
crc32c = "0.4"
crc32fast = "1.2"
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = { version = "0.3" }
futures-sink = { version = "0.3" }
futures-util = { version = "0.3", features = ["sink"] }
http = "0.2"
log = "0.4"
openssl = "0.10"
rand = "0.7"